# kiosk-show-replacement

./: .dockerignore  .env.docker.example  .env.example  .flake8  .gitignore  BROWSER_TESTING_PLAN.md  CLAUDE.md  Dockerfile  README.md  ai-project-info.md  docker-compose.prod.yml  docker-compose.yml  docker-entrypoint.sh  flask_cli.py  frontend_issues_analysis.md  implementation-plan.md  init_db.py  mypy.ini  nox_test_output.txt  noxfile.py  playwright.config.js  progress-tracking.md  prompts.md  pyproject.toml  pytest-playwright.ini  pytest.ini  run.py  test-fixes-summary.md  test_global_access.py
.claude/: settings.json
.github/: copilot-instructions.md
.github/workflows/: ci.yml  constraints.txt  release.yml
docs/: FUNCTIONAL_SPECIFICATION.md  ai-project-info.md  api.rst  conf.py  deployment.rst  development.rst  getting-started.rst  index.rst  installation.rst  modules.rst  progress-tracking.md  usage.rst
docs/features/: README.md  UI-links.md  admin-integration-tests-session-state.md  admin-integration-tests.md  admin-slide-inactive.md  bug-assignment-history-page-error.md  bug-display-settings-not-realtime.md  bug-monitoring-page-errors.md  bug-slideshow-edit-issues.md  bug-sse-connection-monitor.md  bug-sse-slideshow-edit.md  bug-video-slides-not-playing.md  db-issues.md  display-reload-button.md  docker-deployment.md  docker-fix.md  docs-cleanup.md  edit-slide-form-population.md  error-handling-resilience.md  feature-webpage-slide-scaling.md  fix-display-assigned-slideshow-api-bug.md  fix-display-delete-assignment-history-bug.md  fix-docker-build.md  fix-file-upload-api-400-error.md  fix-flaky-integration-tests.md  fix-flaky-skedda-e2e-tests.md  fix-frontend-eslint-errors.md  fix-protected-route-redirect.md  fix-sse-debugger-component-error.md  frontend-test-fixes.md  github-actions-ci-cd.md  ical.md  newrelic.md  package-distribution.md  performance-optimization.md  pr7_copilot_review.md  prometheus.md  real-auth.md  remove-e2e-tests.md  resolve-mypy-errors.md  (+17 more)
frontend/: .eslintrc.js  eslint.config.js  index.html  package-lock.json  package.json  vite.config.integration.ts  vite.config.ts
frontend/src/: App.tsx  main.tsx
kiosk_show_replacement/: __init__.py  app.py  database_utils.py  db_resilience.py  exceptions.py  health.py  ical_parser.py  ical_service.py  logging_config.py  metrics.py  middleware.py  migration_utils.py  sse.py  storage.py  storage_resilience.py  validation.py
kiosk_show_replacement/api/: __init__.py  helpers.py  v1.py
kiosk_show_replacement/auth/: __init__.py  decorators.py  views.py
kiosk_show_replacement/cli/: __init__.py  init_db.py  init_db_new.py  main.py
kiosk_show_replacement/config/: __init__.py
kiosk_show_replacement/dashboard/: __init__.py  views.py
kiosk_show_replacement/display/: __init__.py  views.py
kiosk_show_replacement/main/: __init__.py
kiosk_show_replacement/models/: __init__.py
kiosk_show_replacement/slideshow/: __init__.py
kiosk_show_replacement/templates/: base.html  display.html  index.html
kiosk_show_replacement/utils/: __init__.py
migrations/versions/: 14a2f7cdc2e5_add_cascade_delete_to_assignment_.py  70f9ada54827_increase_password_hash_column_size_for_.py  8a3b5c7d9e1f_add_show_info_overlay_to_displays.py  98e37a0eed25_add_icalfeed_and_icalevent_models_for_.py  9b4c6d8e0f2a_add_scale_factor_to_slideshow_items.py  f70598d0f069_add_display_archive_and_configuration_.py
scripts/: init_db.py
tests/: conftest.py  pytest-integration.ini  test_enhanced_display_interface_clean.py
tests/assets/: skedda.ics
tests/e2e/: conftest.py  test_basic_access.py  test_dashboard_navigation.py  test_skedda_display.py  test_sse_workflows.py  test_user_workflows.py  test_workflows.py
tests/integration/: conftest.py  helpers.py  server_manager.py  test_admin_slides.py  test_api.py  test_api_legacy.py  test_assignment_history_api.py  test_auth_flow.py  test_auth_workflow.py  test_dashboard.py  test_display_detail.py  test_display_lifecycle_api.py  test_display_management.py  test_display_playback.py  test_display_workflow.py  test_enhanced_display_interface.py  test_enhanced_display_simple.py  test_full_user_experience.py  test_routes.py  test_simple_browser.py  test_slideshow_items.py  test_slideshow_management.py  test_sse_integration.py  (+7 more)
(+130 files in other folders)
